--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,22 @@
 .main-container {
-  display: flex;
-  justify-content: center;
   font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .top-header {
   width: 375px;
-  border: 1px solid #000;
+  background-image: url("../images/background.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 
 .toolbar {
   display: flex;
   justify-content: space-between;
+  width: 375px;
 }
 
 .toolbar span {
@@ -63,4 +68,17 @@
 
 .icons li {
   padding: 4px;
+}
+
+.down-arrow {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  position: absolute;
+  left: calc(50% - 40px / 2 + 0.5px);
+  bottom: 4px;
+}
+.down-arrow img {
+  border: 1px solid #dfe1e6;
+  border-radius: 32px;
 }
