--- a/css/style.css
+++ b/css/style.css
@@ -27,17 +27,19 @@
   padding: 20px;
 }
 
-.toolbar h1 {
+.toolbar a {
   font-weight: 600;
   font-size: 20px;
   line-height: 28px;
   color: #28352f;
+  text-decoration: none;
 }
 
 .header-title {
   text-align: center;
 }
 
+.header-title h1,
 .header-title h2 {
   font-weight: 700;
   font-size: 40px;
@@ -58,6 +60,7 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 28px;
+  color: #172b4d;
 }
 
 .icons {
