Add contact-form class

--- a/css/style.css
+++ b/css/style.css
@@ -311,3 +311,11 @@ button:hover {
 .contact-section h2 {
   text-align: center;
 }
+
+.contact-form {
+  
+}
+
+.contact-form ul {
+  list-style-type: none;
+}
