--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html {
   box-sizing: inherit;
 }
 .main-container {
-  font-family: sans-serif;
+  font-family: Inter, sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -343,6 +343,7 @@ button:hover {
 }
 
 .contact-form textarea::placeholder {
+  font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
