Add background image for contact form

--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,9 @@ button:hover {
   flex-direction: column;
   align-items: center;
   padding: 0 24px;
+  background-image: url("../images/illustration-contact-form.svg");
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 
 .contact-section h2 {
