--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,13 @@ button {
 }
 
 button:hover {
-  background: #c5e9da;
+  background: #36b37f;
+  box-shadow: 0px 8px 16px #36b37f3d;
+  cursor: pointer;
+}
+
+button:active {
+  background: #008552;
 }
 
 .about-container {
@@ -341,6 +347,7 @@ button:hover {
   height: 48px;
   border: 1px solid #d0d9d4;
   border-radius: 4px;
+  padding: 15px 16px;
 }
 
 .contact-form input::placeholder {
@@ -348,7 +355,6 @@ button:hover {
   font-size: 15px;
   line-height: 24px;
   color: #6b778c;
-  padding: 15px 16px;
 }
 
 .contact-form textarea::placeholder {
@@ -357,14 +363,15 @@ button:hover {
   font-size: 15px;
   line-height: 24px;
   color: #091e42;
-  padding: 12px;
 }
 
 .contact-form textarea {
+  font-family: Inter, sans-serif;
   min-width: 327px;
   height: 114px;
   border: 1px solid #60c095;
   border-radius: 4px;
+  padding: 12px;
 }
 
 .contact-form li {
