--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ button {
 
 button:hover {
   background: #36b37f;
-  box-shadow: 0px 8px 16px #36b37f3d;
+  box-shadow: 0 8px 16px #36b37f3d;
   cursor: pointer;
 }
 
@@ -336,6 +336,7 @@ button:active {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 24px;
 }
 
 .contact-form li:last-child {
@@ -372,10 +373,6 @@ button:active {
   border: 1px solid #60c095;
   border-radius: 4px;
   padding: 12px;
-}
-
-.contact-form li {
-  margin-bottom: 24px;
 }
 
 .footer-section {
