--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-@import url("desktop-style.css") only screen and (min-width: 768px);
-
 html {
   box-sizing: border-box;
 }
@@ -10,45 +8,9 @@ html {
   box-sizing: inherit;
 }
 
-.main-container {
-  font-family: Inter, sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.top-header {
-  background-image: url("../images/background.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-}
-
-.toolbar {
-  display: flex;
-  justify-content: space-between;
-  min-width: 360px;
-  padding-left: 12px;
-}
-
-.toolbar span {
-  margin: auto 0;
-}
-
-.toolbar > * {
-  padding: 20px;
-}
-
-.toolbar a {
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 28px;
-  color: #28352f;
-  text-decoration: none;
-}
-
-.header-title {
-  text-align: center;
+body {
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 h1,
@@ -57,6 +19,85 @@ h2 {
   font-size: 40px;
   line-height: 52px;
   color: #172b4d;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.main-container {
+  font-family: Inter, sans-serif;
+}
+
+.top-section {
+  background-image: url("../images/background.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.header-mobile {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 24px;
+}
+
+.header-mobile span {
+  margin: auto 0;
+}
+
+.header-mobile > * {
+  padding-top: 54px;
+}
+
+.header-mobile a {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 28px;
+  color: #28352f;
+  text-decoration: none;
+}
+
+.nav-desktop {
+  display: none;
+}
+
+.nav ul {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+
+.nav li {
+  padding: 26px 12px;
+  margin-right: 8px;
+}
+
+.nav li:last-child {
+  margin-right: 0;
+}
+
+.nav a {
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 20px;
+  text-decoration: none;
+  color: #344563;
+}
+
+/** this is a style for desktop version **/
+@media only screen and (min-width: 768px) {
+  .header-mobile {
+    display: none;
+  }
+
+  .nav-desktop {
+    display: block;
+  }
+}
+
+.header-title {
+  text-align: center;
 }
 
 .header-title .color-green {
