--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ ul {
   display: flex;
   justify-content: center;
   margin: 0;
+  padding: 0;
 }
 
 .nav li {
@@ -94,13 +95,31 @@ ul {
   .nav-desktop {
     display: block;
   }
+
+  .header-title {
+    margin-top: 160px;
+  }
+
+  .header-title > * {
+    font-weight: 800;
+    font-size: 48px;
+    line-height: 60px;
+  }
 }
 
 .header-title {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 74px;
 }
 
-.header-title .color-green {
+.header-title > * {
+  text-align: center;
+  margin: 0;
+}
+
+.color-green {
   color: #36b37f;
 }
 
