--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ html {
 }
 
 body {
-  max-width: 1440px;
   margin: 0 auto;
 }
 
@@ -26,6 +25,9 @@ ul {
 }
 
 .main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-family: Inter, sans-serif;
 }
 
@@ -37,16 +39,13 @@ ul {
 }
 
 .header-mobile {
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  margin: 0 24px;
+  padding: 0 24px;
 }
 
-.header-mobile span {
-  margin: auto 0;
-}
-
-.header-mobile > * {
+.header-mobile div {
   padding-top: 54px;
 }
 
@@ -105,6 +104,10 @@ ul {
     font-size: 48px;
     line-height: 60px;
   }
+  .header-body p {
+    line-height: 32px;
+    max-width: 920px;
+  }
 }
 
 .header-title {
@@ -117,6 +120,7 @@ ul {
 .header-title > * {
   text-align: center;
   margin: 0;
+  padding: 0 24px;
 }
 
 .color-green {
@@ -125,7 +129,6 @@ ul {
 
 .header-body {
   text-align: center;
-  padding: 24px;
 }
 
 .header-body p {
@@ -133,6 +136,7 @@ ul {
   font-size: 20px;
   line-height: 28px;
   color: #172b4d;
+  padding: 24px;
 }
 
 .icons {
