--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,10 @@ ul {
     line-height: 32px;
     max-width: 920px;
   }
+
+  .top-section {
+    padding-bottom: 495px;
+  }
 }
 
 .header-title {
@@ -140,7 +144,6 @@ ul {
 }
 
 .icons {
-  list-style-type: none;
   display: flex;
   justify-content: center;
   padding: 0;
@@ -160,33 +163,47 @@ ul {
 .down-arrow img {
   border: 1px solid #dfe1e6;
   border-radius: 32px;
-}
-
-.work-container {
-  display: grid;
+  width: 40px;
+  height: 40px;
 }
 
 .work-title {
   display: flex;
   justify-content: center;
+  padding: 0 24px;
 }
 
 .work-title h2 {
   text-align: center;
-  padding: 0 24px;
 }
 
 .work-list {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto;
+  padding: 24px 22px;
 }
 
-.work-list ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+/** display grid for desktop version**/
+@media only screen and (min-width: 768px) and (max-width: 1200px) {
+  .work-list {
+    grid-template-columns: repeat(2, 369px);
+    justify-content: space-between;
+    column-gap: 24px;
+    row-gap: 32px;
+  }
 }
 
-.work-list .list-item {
+/** display grid for medium devices **/
+@media only screen and (min-width: 1200px) {
+  .work-list {
+    grid-template-columns: repeat(3, 369px);
+    justify-content: space-between;
+    column-gap: 24px;
+    row-gap: 32px;
+  }
+}
+
+.list-item {
   display: flex;
   flex-direction: column;
   border: 1px solid #d0d9d4;
@@ -218,6 +235,7 @@ ul {
 .buttons {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .buttons div {
