--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ ul {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  width: 100%;
 }
 
 .header-mobile {
@@ -104,6 +105,13 @@ ul {
     font-size: 48px;
     line-height: 60px;
   }
+
+  .header-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .header-body p {
     line-height: 32px;
     max-width: 920px;
@@ -283,17 +291,40 @@ button:active {
 }
 
 .about-container {
-  display: grid;
-  grid-template-columns: 360px;
+  width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+  .about-container {
+    background-image: url("../images/about-me-background.png");
+    background-repeat: no-repeat;
+    background-position: right top;
+  }
+
+  .resume-button {
+    background-image: url("../images/about-me-background2.png");
+    background-position: left bottom;
+    background-repeat: no-repeat;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .about-top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("../images/about-me-desktop1.svg"),
+      url("../images/about-me-desktop2.svg");
+    background-position: right top, left bottom;
+    background-repeat: no-repeat, no-repeat;
+    width: 100%;
+  }
 }
 
 .about-header {
   display: flex;
   align-items: flex-end;
   height: 127px;
-  background-image: url("../images/about-me-background.png");
-  background-repeat: no-repeat;
-  background-position: right top;
 }
 
 .about-header h2 {
@@ -302,12 +333,6 @@ button:active {
   line-height: 52px;
   color: #172b4d;
   margin: 0 auto;
-  text-align: center;
-}
-
-.about-desc {
-  display: flex;
-  margin: 24px 0;
 }
 
 .about-desc p {
@@ -316,17 +341,22 @@ button:active {
   line-height: 32px;
   color: #42526e;
   text-align: center;
-  width: 351px;
   display: block;
   margin: 0;
+  padding: 24px 12px;
+}
+
+@media only screen and (min-width: 768px) {
+  .about-desc p {
+    line-height: 32px;
+    max-width: 920px;
+  }
 }
 
 .resume-button {
   display: flex;
-  background-image: url("../images/about-me-background2.png");
-  background-position: left bottom;
-  background-repeat: no-repeat;
   height: 72px;
+  width: 100%;
 }
 
 .resume-button button {
