--- a/css/style.css
+++ b/css/style.css
@@ -277,12 +277,14 @@ button {
   letter-spacing: 0.03em;
   border: 0;
   background: #36b37f;
+  transition: transform 500ms;
 }
 
 button:hover {
   background: #36b37f;
   box-shadow: 0 8px 16px #36b37f3d;
   cursor: pointer;
+  transform: scale(1.05);
 }
 
 button:active {
@@ -312,8 +314,7 @@ button:active {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image:
-      url("../images/about-me-desktop1.svg"),
+    background-image: url("../images/about-me-desktop1.svg"),
       url("../images/about-me-desktop2.svg");
     background-position: right top, left bottom;
     background-repeat: no-repeat, no-repeat;
@@ -511,8 +512,7 @@ button:active {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    background-image:
-      url("../images/contact-section-1.svg"),
+    background-image: url("../images/contact-section-1.svg"),
       url("../images/contact-section-2.svg"),
       url("../images/contact-form-illustratoin-3-desktop.svg");
     background-repeat: no-repeat, no-repeat, no-repeat;
