--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,8 @@ button:active {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("../images/about-me-desktop1.svg"),
+    background-image:
+      url("../images/about-me-desktop1.svg"),
       url("../images/about-me-desktop2.svg");
     background-position: right top, left bottom;
     background-repeat: no-repeat, no-repeat;
@@ -518,7 +519,8 @@ button:active {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    background-image: url("../images/contact-section-1.svg"),
+    background-image:
+      url("../images/contact-section-1.svg"),
       url("../images/contact-section-2.svg"),
       url("../images/contact-form-illustratoin-3-desktop.svg");
     background-repeat: no-repeat, no-repeat, no-repeat;
