--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 h1,
-h2 {
+h2,h3 {
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
@@ -230,7 +230,7 @@ ul {
   padding: 16px;
 }
 
-.image-desc h2 {
+.image-desc h3 {
   font-weight: 600;
   font-size: 24px;
   line-height: 32px;
@@ -415,7 +415,7 @@ button:active {
   padding-top: 40px;
 }
 
-.item-list h2 {
+.item-list h3 {
   font-weight: 600;
   font-size: 24px;
   line-height: 32px;
