--- a/css/style.css
+++ b/css/style.css
@@ -51,9 +51,6 @@ ul {
   padding-top: 54px;
 }
 
-.closeIcon {
-  display: none;
-}
 .header-mobile a {
   font-weight: 600;
   font-size: 20px;
@@ -62,8 +59,37 @@ ul {
   text-decoration: none;
 }
 
-.nav-desktop {
+.hide {
   display: none;
+}
+.show {
+  display: block;
+}
+
+.nav-mobile {
+  display: block;
+  font-weight: 600;
+  font-size: 32px;
+  background-color: #fff;
+  height: 100vh;
+}
+
+.nav-mobile ul {
+  margin: 0;
+  padding-top: 50px;
+}
+
+.nav-mobile a {
+  text-decoration: none;
+  text-shadow: none;
+}
+
+.nav-mobile li {
+  padding-bottom: 40px;
+}
+
+.menu-background {
+  background-color: #fff;
 }
 
 /** this is a style for desktop version **/
@@ -318,8 +344,7 @@ button:active {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image:
-      url("../images/about-me-desktop1.svg"),
+    background-image: url("../images/about-me-desktop1.svg"),
       url("../images/about-me-desktop2.svg");
     background-position: right top, left bottom;
     background-repeat: no-repeat, no-repeat;
@@ -526,8 +551,7 @@ button:active {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    background-image:
-      url("../images/contact-section-1.svg"),
+    background-image: url("../images/contact-section-1.svg"),
       url("../images/contact-section-2.svg"),
       url("../images/contact-form-illustratoin-3-desktop.svg");
     background-repeat: no-repeat, no-repeat, no-repeat;
