--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ ul {
 
 .nav-mobile ul {
   margin: 0;
-  padding-top: 50px;
+  padding-top: 20px;
 }
 
 .nav-mobile a {
@@ -343,8 +343,7 @@ button:active {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image:
-      url("../images/about-me-desktop1.svg"),
+    background-image: url("../images/about-me-desktop1.svg"),
       url("../images/about-me-desktop2.svg");
     background-position: right top, left bottom;
     background-repeat: no-repeat, no-repeat;
@@ -551,8 +550,7 @@ button:active {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    background-image:
-      url("../images/contact-section-1.svg"),
+    background-image: url("../images/contact-section-1.svg"),
       url("../images/contact-section-2.svg"),
       url("../images/contact-form-illustratoin-3-desktop.svg");
     background-repeat: no-repeat, no-repeat, no-repeat;
