--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
 
 *,
@@ -29,7 +30,6 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: Inter, sans-serif;
 }
 
 .top-section {
