--- a/css/style.css
+++ b/css/style.css
@@ -734,3 +734,71 @@ button:active {
   align-items: center;
   padding: 0 10px;
 }
+
+/** style model window for desktop devices **/
+@media only screen and (min-width: 768px) {
+  .model-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(193, 199, 208, 0.4);
+  }
+
+  .model {
+    width: 70%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .model-placeholder {
+    height: 40vh;
+    order: 1;
+    flex-basis: 100%;
+    margin-top: 62px;
+  }
+
+  .project-title {
+    order: 2;
+    width: 60%;
+    flex-basis: 60%;
+    text-align: left;
+  }
+
+  .buttons {
+    order: 3;
+    justify-content: flex-start;
+    gap: 10px;
+    flex-basis: 100%;
+  }
+  .model-description {
+    order: 4;
+    flex-basis: 100%;
+  }
+
+  .project-buttons {
+    order: 2;
+    width: 40%;
+    flex-basis: 40%;
+    display: flex;
+    justify-content: flex-end;
+    align-self: center;
+    gap: 12px;
+  }
+
+  .model-placeholder img {
+    position: absolute;
+    right: 22px;
+    top: -62px;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    background-color: #28352f;
+  }
+}
+
+/** display grid for medium version **/
+@media only screen and (min-width: 768px) and (max-width: 1200px) {
+  .model {
+    width: 90%;
+  }
+}
