--- a/css/style.css
+++ b/css/style.css
@@ -802,6 +802,7 @@ button:active {
 
   .icon-close {
     top: -62px;
+    left: 0;
     width: 40px;
     height: 40px;
     background-color: #ebecf0;
