--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 *,
@@ -33,7 +33,7 @@ ul {
 }
 
 .top-section {
-  background-image: url("../images/background.png");
+  background-image: url('../images/background.png');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -144,10 +144,15 @@ ul {
 
   .nav a {
     font-weight: 600;
-    font-size: 15px;
+    font-size: 18px;
     line-height: 20px;
     text-decoration: none;
     color: #344563;
+  }
+
+  .nav a:hover {
+    text-decoration: underline;
+    color: #60c095;
   }
 }
 
@@ -249,8 +254,10 @@ ul {
   margin-bottom: 24px;
 }
 
-.image-placeholder {
-  height: 252px;
+.image-placeholder img {
+  height: 250px;
+  width: 100%;
+  border-radius: 8px;
 }
 
 .image-desc {
@@ -326,13 +333,13 @@ button:active {
 
 @media only screen and (max-width: 768px) {
   .about-container {
-    background-image: url("../images/about-me-background.png");
+    background-image: url('../images/about-me-background.png');
     background-repeat: no-repeat;
     background-position: right top;
   }
 
   .resume-button {
-    background-image: url("../images/about-me-background2.png");
+    background-image: url('../images/about-me-background2.png');
     background-position: left bottom;
     background-repeat: no-repeat;
   }
@@ -343,9 +350,8 @@ button:active {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image:
-      url("../images/about-me-desktop1.svg"),
-      url("../images/about-me-desktop2.svg");
+    background-image: url('../images/about-me-desktop1.svg'),
+      url('../images/about-me-desktop2.svg');
     background-position: right top, left bottom;
     background-repeat: no-repeat, no-repeat;
     width: 100%;
@@ -551,10 +557,9 @@ button:active {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    background-image:
-      url("../images/contact-section-1.svg"),
-      url("../images/contact-section-2.svg"),
-      url("../images/contact-form-illustratoin-3-desktop.svg");
+    background-image: url('../images/contact-section-1.svg'),
+      url('../images/contact-section-2.svg'),
+      url('../images/contact-form-illustratoin-3-desktop.svg');
     background-repeat: no-repeat, no-repeat, no-repeat;
     background-position: bottom left, 20% 80%, bottom right;
   }
@@ -562,7 +567,7 @@ button:active {
 
 @media only screen and (max-width: 768px) {
   .contact-section {
-    background-image: url("../images/illustration-contact-form.svg");
+    background-image: url('../images/illustration-contact-form.svg');
     background-repeat: no-repeat;
     background-position: bottom right;
   }
@@ -670,7 +675,7 @@ button:active {
 .model-placeholder {
   width: 100%;
   height: 20vh;
-  background: url("../images/tech-image.png") no-repeat;
+  background: url('../images/tech-image.png') no-repeat;
   background-position: center center;
   background-size: cover;
   border: 1px solid #dfe1e6;
@@ -743,7 +748,7 @@ button:active {
 }
 
 .icon-close::before {
-  content: "x";
+  content: 'x';
   color: #fffff9;
   font-weight: 500;
   font-family: Arial, sans-serif;
